adding salad url

--- a/4_prompt_engineering_LlaMa_OpenAI.ipynb
+++ b/4_prompt_engineering_LlaMa_OpenAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,13 +238,12 @@
      "text": [
       " Sure! Here are the named entities identified in the text:\n",
       "\n",
-      "1. Albert Einstein - Person\n",
-      "2. Germany - Country\n",
-      "3. Kingdom of Württemberg - Historical region or territory\n",
-      "4. German Empire - Historical empire\n",
-      "5. Switzerland - Country\n",
-      "6. University of Zurich - Educational institution\n",
-      "7. Ph.D. - Degree\n"
+      "1. Albert Einstein\n",
+      "2. Germany\n",
+      "3. Kingdom of Württemberg\n",
+      "4. German Empire\n",
+      "5. Switzerland\n",
+      "6. University of Zurich\n"
      ]
     }
    ],
